# libwecan

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.txt  run-tests.sh
include/: libwecan.h
src/: CMakeLists.txt  Makefile  libwecan.c
tests/: CMakeLists.txt  Makefile  tests.c
tests/src/: tests.c
